# spectre_kinetic

./: .gitignore  PLAN.md  PLAN2.md  PLAN3.md  README.md  TRAIN.md  mix.exs
lib/: classifier.ex  spectre_kinetic.ex  telemetry.ex
lib/classifier/: pipeline.ex
lib/classifiers/: built_in.ex
lib/classifiers/internal/: axon_classifier.ex  axon_runtime.ex  dataset.ex  feature_spec.ex  feature_vector.ex  trainer.ex
lib/classifiers/plan_confidence/: classifier.ex  features.ex  (+1 more)
lib/engine/: action.ex  action_chain.ex  helper.ex  native.ex  runtime.ex  server.ex
lib/llm/: dictionary.ex  extractor.ex  parser.ex  prompt.ex
lib/planner/: compiler.ex  embedding_runtime.ex  plan_context.ex  plan_finalizer.ex  planner.ex  registry.ex  registry_store.ex  reranker_runtime.ex  retrieval.ex  runtime.ex  scorer.ex  selection.ex  slot_mapper.ex
lib/reranker/: calibration.ex  feature_builder.ex  runtime.ex  trainer.ex
lib/runtime/: action.ex  action_chain.ex  onnx.ex  runtime_config.ex  server.ex  tool.ex
lib/spectre_kinetic/: al_extractor.ex  native.ex  server.ex
lib/training/: calibration.ex  feature_builder.ex  reranker.ex
native/spectre_ffi/: Cargo.toml
native/spectre_ffi/src/: lib.rs
priv/dataset/: README.md  plan_confidence.jsonl  safety_risk.jsonl  slot_confidence.jsonl
test/: spectre_kinetic_test.exs
test/spectre_kinetic/: action_test.exs  classifier_axon_test.exs  classifier_pipeline_test.exs  classifier_plug_system_test.exs  compiler_test.exs  dictionary_test.exs  extractor_test.exs  integration_test.exs  parser_test.exs  planner_examples_test.exs  planner_test.exs  prompt_test.exs  registry_backend_contract_test.exs  registry_store_test.exs  reranker_test.exs  runtime_config_test.exs  runtime_test.exs  scorer_test.exs  slot_mapper_test.exs  telemetry_test.exs  tool_extractor_test.exs
test/support/: al_examples.ex  fake_axon_classifier.ex  fake_feature_spec.ex  fixtures.ex  registry_helper.ex  telemetry_helper.ex  tool_fixtures.ex
(+28 files in other folders)
