[package]
name = "spectre_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "spectre_ffi"
crate-type = ["cdylib"]

[features]
default = []
helper = ["dep:anyhow", "dep:clap", "dep:spectre-train", "dep:tokenizers"]

[[bin]]
name = "spectre_kinetic_helper"
path = "src/bin/spectre_kinetic_helper.rs"
required-features = ["helper"]

[dependencies]
spectre-core = { path = "../../../spectre-kinetic-engine/crates/spectre-core" }
spectre-train = { path = "../../../spectre-kinetic-engine/crates/spectre-train", optional = true }
rustler = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
tokenizers = { version = "0.21", default-features = false, features = ["onig", "progressbar", "esaxx_fast"], optional = true }
